# teo-parser

./: Cargo.toml  README.md  test.teo
src/: lib.rs
src/ast/: accessible.rs  action.rs  argument.rs  argument_declaration.rs  argument_list.rs  argument_list_declaration.rs  arith.rs  arith_expr.rs  arity.rs  availability.rs  availability_flag.rs  availability_flag_end.rs  bracket_expression.rs  call.rs  callable_variant.rs  client.rs  code_comment.rs  comment.rs  comment_block.rs  config.rs  config_declaration.rs  config_item.rs  config_keyword.rs  constant.rs  constant_declaration.rs  data_set.rs  decorator.rs  decorator_declaration.rs  doc_comment.rs  empty_decorator.rs  empty_dot.rs  empty_pipeline.rs  entity.rs  enum.rs  expr.rs  expression.rs  field.rs  field_type.rs  function_declaration.rs  generator.rs  (+48 more)
src/availability/: mod.rs
src/builtin/: mod.rs  std.teo
src/completion/: collect_argument_list_names.rs  collect_reference_completion.rs  completion.rs  completion_context.rs  completion_item.rs  completion_item_from_top.rs  find_completion.rs  find_completion_in_argument_list.rs  find_completion_in_argument_list_declaration.rs  find_completion_in_arith_expr.rs  find_completion_in_array_literal.rs  find_completion_in_config.rs  find_completion_in_config_declaration.rs  find_completion_in_constant_declaration.rs  find_completion_in_data_set_declaration.rs  find_completion_in_decorator.rs  find_completion_in_decorator_declaration.rs  find_completion_in_dictionary_literal.rs  find_completion_in_enum_declaration.rs  find_completion_in_enum_variant_literal.rs  find_completion_in_expression.rs  find_completion_in_field.rs  find_completion_in_handler_group.rs  find_completion_in_identifier.rs  find_completion_in_interface.rs  find_completion_in_middleware_declaration.rs  find_completion_in_model.rs  find_completion_in_pipeline.rs  find_completion_in_pipeline_item_declaration.rs  find_completion_in_struct_declaration.rs  find_completion_in_tuple_literal.rs  find_completion_in_type_expr.rs  find_completion_in_unit.rs  find_completion_in_use_middleware_block.rs  find_top_completion_with_filter.rs  mod.rs
src/definition/: definition.rs  definition_context.rs  jump_to_definition.rs  jump_to_definition_in_argument_list.rs  jump_to_definition_in_argument_list_declaration.rs  jump_to_definition_in_arith_expr.rs  jump_to_definition_in_array_literal.rs  jump_to_definition_in_config.rs  jump_to_definition_in_config_declaration.rs  jump_to_definition_in_constant.rs  jump_to_definition_in_declared_synthesized_shape.rs  jump_to_definition_in_decorator.rs  jump_to_definition_in_decorator_declaration.rs  jump_to_definition_in_dictionary_literal.rs  jump_to_definition_in_enum_declaration.rs  jump_to_definition_in_enum_variant_literal.rs  jump_to_definition_in_expression.rs  jump_to_definition_in_field.rs  jump_to_definition_in_handler_declaration.rs  jump_to_definition_in_handler_template_declaration.rs  jump_to_definition_in_identifier.rs  jump_to_definition_in_import.rs  jump_to_definition_in_include_handler_from_template.rs  jump_to_definition_in_interface.rs  jump_to_definition_in_middleware_declaration.rs  jump_to_definition_in_model.rs  jump_to_definition_in_pipeline.rs  jump_to_definition_in_pipeline_item_declaration.rs  jump_to_definition_in_struct_declaration.rs  jump_to_definition_in_tuple_literal.rs  jump_to_definition_in_type_expr.rs  jump_to_definition_in_unit.rs  mod.rs
src/diagnostics/: diagnostics.rs  formatter.rs  mod.rs  printer.rs
src/expr/: mod.rs  (+3 more)
tests/: mod.rs  stdlib.rs
(+253 files in other folders)
