[package]
name = "teo-parser"
version = "0.3.0-alpha.0"
edition = "2021"
description = "Parser for Teo schema language"
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teo-result = { version = "0.3.0-alpha.0", path = "../teo-result" }
pest = "2.7.10"
pest_derive = "2.7.10"
colored = "2.1.0"
pathdiff = "0.2.1"
once_cell = "1.19"
maplit = "1.0.2"
array_tool = "1.0.3"
itertools = "0.12.1"
snailquote = "0.3.1"
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
regex = "1.10.4"
bigdecimal = "=0.3.1"
bson = { version = "2.10.0", features = ["chrono-0_4", "serde_with"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
path-clean = "1.0.1"
educe = "0.5.11"
indexmap = { version = "2.2", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
backtrace-on-stack-overflow = "0.3.0"