[package]
name = "teo-parser"
version = "0.3.0"
edition = "2021"
description = "Parser for Teo schema language"
license = "Apache-2.0"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teo-result = { version = "0.3.0", path = "../teo-result" }
pest = "2.7.14"
pest_derive = "2.7.14"
colored = "2.1.0"
pathdiff = "0.2.2"
once_cell = "1.20.2"
maplit = "1.0.2"
array_tool = "1.0.3"
itertools = "0.13"
snailquote = "0.3.1"
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
regex = "1.11.1"
bigdecimal = "=0.3.1"
bson = { version = "2.13.0", features = ["chrono-0_4", "serde_with"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
path-clean = "1.0.1"
educe = "0.6.0"
indexmap = { version = "2.6", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
getrandom = { version = "0.2", features = ["js"] }
time = "0.3.36"

[dev-dependencies]
backtrace-on-stack-overflow = "0.3.0"